_archive/content-services/4.1/glossary/glossary_c.md
---
author: [Alfresco Documentation, Alfresco Documentation]
source: 
audience: 
category: Glossary
option: glossary
---

# C

Glossary terms starting with the letter C.

[A](glossary_a.md) \| [B](glossary_b.md) \| [C](glossary_c.md) \| [D](glossary_d.md) \| [E](glossary_e.md) \| [F](glossary_f.md) \| [G](glossary_g.md) \| [H](glossary_h.md) \| [I](glossary_i.md) \| [J](glossary_j.md) \| [K](glossary_k.md) \| [L](glossary_l.md) \| [M](glossary_m.md) \| [N](glossary_n.md) \| [O](glossary_o.md) \| [P](glossary_p.md) \| [Q](glossary_q.md) \| [R](glossary_r.md) \| [S](glossary_s.md) \| [T](glossary_t.md) \| [U](glossary_u.md) \| [V](glossary_v.md) \| [W](glossary_w.md) \| [X](glossary_x.md) \| [Y](glossary_y.md) \| [Z](glossary_z.md)

-   **CachingContentStore**

    The CachingContentStore \(CCS\) class adds caching to any ContentStore implementation. Wrapping a slow ContentStore in a CachingContentStore improves access speed in many use cases. Example use cases include document storage using a XAM appliance or cloud-based storage, such as Amazon's S3.

-   **CAS**

    See Central Authentication Service.

-   **category**

    A category in Alfresco allows you to organize your content to help you retrieve the content you are looking for. You classify your content items in Alfresco with categories. The categories are organized into related groups to form a hierarchy. You can link a content item to more than one category.

-   **Central Authentication Service**

    The Central Authentication Service \(CAS\) is an authentication system that enables enterprise single sign-on to web sites.

-   **CIFS**

    Microsoft Common Internet File System \(CIFS\) is a network file system for sharing files across the Internet.

-   **<classpathRoot\>**

    The <classpathRoot\> is the default directory whose contents are automatically added to the start of your application server's classpath. The location of this directory varies depending on your application server.

-   **CMIS**

    See Content Management Interoperability Services.

-   **composite action**

    A composite action is a collection of actions that are combined in a designated order to make one unit of work. If any action within the composite fails, then no other actions within this composite are completed. The unit of work can be any size that you determine.

-   **condition**

    A condition is a test applied to an action used to determine whether the action can be performed.

-   **<configRoot\>**

    The <configRoot\> directory is where the default configuration files are stored. Where possible, you should not edit these files but you can edit the overrides in the <extension\> directory. For example, for Tomcat, <configRoot\> is: <TOMCAT\_HOME\>/webapps/alfresco/WEB-INF/.

-   **<configRootShare\>**

    The <configRootShare\> directory is where the default configuration files for Share are stored. Where possible, you should not edit these files but you can edit the Share override files in the <web-extension\> directory. For example, for Tomcat, <configRootShare\> is <TOMCAT\_HOME\>/webapps/share/WEB-INF.

-   **content**

    Files or documents made of two main elements: the content itself and information about the content \(metadata\). For example, documents, video, audio, images, XML, and HTML.

-   **content aspect**

    See aspect.

-   **Content Management Interoperability Services**

    The Content Management Interoperability Services \(CMIS\) standard defines a domain model and Web Services and Restful AtomPub bindings that can be used by applications to work with one or more Content Management repositories/systems.

    The CMIS interface is designed to be layered on top of existing Content Management systems and their existing programmatic interfaces. It is not intended to prescribe how specific features should be implemented within those CM systems, not to exhaustively expose all of the CM system's capabilities through the CMIS interfaces. Rather, it is intended to define a generic/universal set of capabilities provided by a CM system and a set of services for working with those capabilities.

    Source: [http://docs.oasis-open.org/cmis/CMIS/v1.0/cmis-spec-v1.0.html](http://docs.oasis-open.org/cmis/CMIS/v1.0/cmis-spec-v1.0.html)

-   **content model**

    A content model is a collection of related content types and aspects.

-   **content type**

    Content can be categorized as a type and can be one type at any one time. The type describes the fundamental structure of the content.

-   **cURL**

    cURL is a command-line tool for getting or sending files using URL syntax. Libcurl is the equivalent library. cURL uses libcurl, which supports most common internet protocols.


